Updated quick profile input

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -253,11 +253,15 @@
 
                 <input type="text" title="" id="username-form" class="medium-form" placeholder="john_doe_on_instagram" maxlength="30" autocomplete="off" required>
                 <div id="profileDropdown">
-                  <button id="profileDropdownButton" onclick="profileDropdown()" type="button"><img src="src/img/icons/light/edit.svg" alt="Icon of an arrow facing downwards" id="profileDropdownImage"></button>
+                  <div id="profileDropdownMain">
+                    <button id="profileDropdownButton" type="button">
+                      <img src="src/img/icons/light/show-more.svg" alt="Icon of an arrow facing downwards" id="profileDropdownImage">
+                    </button>
+                  </div>
                   <div id="profileDropdownContent">
-                    <a id="profile-1">Profile 1</a>
-                    <a id="profile-2">2</a>
-                    <a id="profile-3">3</a>
+                    <a id="profile-1">Profil 1</a>
+                    <a id="profile-2">Profil 2</a>
+                    <a id="profile-3">Profil 3</a>
                   </div>
                 </div>
 
