Updated profile logic

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -259,9 +259,9 @@
                     </button>
                   </div>
                   <div id="profileDropdownContent">
-                    <a id="profile-1">Profil 1</a>
-                    <a id="profile-2">Profil 2</a>
-                    <a id="profile-3">Profil 3</a>
+                    <a id="profile-1-uid">Profil 1</a>
+                    <a id="profile-2-uid">Profil 2</a>
+                    <a id="profile-3-uid">Profil 3</a>
                   </div>
                 </div>
 
