Added click detection for nav elements

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -53,7 +53,7 @@
         </div>
       </div>
     </header>
-    <nav>
+    <nav id="test">
       <div id="side-bar">
         <div id="upper-content">
           <a class="comment" id="active">
