Updated profile quick selection image

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -255,7 +255,8 @@
                 <div id="profileDropdown">
                   <div id="profileDropdownMain">
                     <button id="profileDropdownButton" type="button">
-                      <img src="src/img/icons/light/show-more.svg" alt="Icon of an arrow facing downwards" id="profileDropdownImage">
+                      <img src="src/img/icons/light/show-more.svg" alt="Icon of an arrow facing downwards" id="profileDropdownImage" class="profileDropdownImage">
+                      <img src="src/img/icons/light/show-more-grey.svg" alt="Icon of an arrow facing downwards" id="profileDropdownImageNoFocus" class="profileDropdownImage">
                     </button>
                   </div>
                   <div id="profileDropdownContent">
