--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -358,7 +358,7 @@
         <div id="error-close-wifi" class="banner-close"><img class="clearIcon" src="src/img/icons/light/clear.svg" alt="Close icon for error banner"></div>
       </div>
     </div>
-    <p id="legal-note">Work in progress - © 2021 by JueK3y</p>
+    <p id="legal-note">Work in progress - &copy; 2021 by JueK3y</p>
     <div class="small-cursor"></div>
   </body>
 </html>
