Small cosmetic changes

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -53,7 +53,7 @@
         </div>
       </div>
     </header>
-    <nav id="test">
+    <nav id="nav-bar">
       <div id="side-bar">
         <div id="upper-content">
           <a class="comment" id="active">
@@ -252,7 +252,7 @@
                 </label>
 
                 <input type="text" title="" id="username-form" class="medium-form" placeholder="john_doe_on_instagram" maxlength="30" autocomplete="off" required>
-                <div id="profileDropdown">
+                <div id="profileDropdown" tabindex="-1">
                   <div id="profileDropdownMain">
                     <button id="profileDropdownButton" type="button">
                       <img src="src/img/icons/light/show-more.svg" alt="Icon of an arrow facing downwards" id="profileDropdownImage" class="profileDropdownImage">
@@ -271,7 +271,7 @@
 
                 <label for="password-form" class="title">
                   <h2 class="big-title">Passwort
-                    <span class="hint--right" aria-label="Setze mit einem Klick dein Instagram Passwort zurück">
+                    <span class="hint--right" aria-label="Setze mit einem Klick dein Instagram Passwort zurück.">
                       <a href="https://instagram.com/accounts/password/reset" target="_blank" tabindex="-1"><img src="src/img/icons/light/info-small.svg" alt="Image of the help icon" class="info"></a>
                     </span>
                   </h2>
@@ -358,7 +358,7 @@
         <div id="error-close-wifi" class="banner-close"><img class="clearIcon" src="src/img/icons/light/clear.svg" alt="Close icon for error banner"></div>
       </div>
     </div>
-    <p id="legal-note">Work in progress - &copy; 2021 by JueK3y</p>
+    <p id="legal-note">Work in progress - &copy; 2021 by <a href="https://www.juek3y.com/">JueK3y</a></p>
     <div class="small-cursor"></div>
   </body>
 </html>
