--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -105,17 +105,26 @@
               <img class="profileIcon" src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
               <p id="profile-1-name">Profil</p> 
             </a>
+            <a class="editProfile">
+              <img src="src/img/icons/light/edit.svg" alt="Icon of the edit icon" class="editProfileIcon">
+            </a>
           </li>
           <li id="profile-2">
             <a>
               <img class="profileIcon" src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
               <p id="profile-2-name">Profil</p> 
             </a>
+            <a class="editProfile">
+              <img src="src/img/icons/light/edit.svg" alt="Icon of the edit icon" class="editProfileIcon">
+            </a>
           </li>
           <li id="profile-3">
             <a>
               <img class="profileIcon" src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
-              <p id="profile-3-name">Profil</p> 
+              <p id="profile-3-name">Profil</p>
+            </a>
+            <a class="editProfile">
+              <img src="src/img/icons/light/edit.svg" alt="Icon of the edit icon" class="editProfileIcon">
             </a>
           </li>
           <li id="more-profile">
