Updated features and python code

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -13,6 +13,7 @@
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
     <script src="src/js/lib/jquery.min.js"></script>
     <script defer src="src/js/notification.js"></script>
+    <script defer src="src/js/pyStart.js"></script>
     <script defer src="src/js/banner.js"></script>
     <script defer src="src/js/cursor.js"></script>
     <script defer src="src/js/theme.js"></script>
