--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -107,7 +107,7 @@
               <p id="profile-1-name">Profil</p> 
             </a>
             <a class="editProfile">
-              <img src="src/img/icons/light/edit.svg" alt="Icon of the edit icon" class="editProfileIcon">
+              <img src="src/img/icons/light/delete.svg" alt="Icon of the edit icon" class="editProfileIcon">
             </a>
           </li>
           <li id="profile-2">
@@ -116,7 +116,7 @@
               <p id="profile-2-name">Profil</p> 
             </a>
             <a class="editProfile">
-              <img src="src/img/icons/light/edit.svg" alt="Icon of the edit icon" class="editProfileIcon">
+              <img src="src/img/icons/light/delete.svg" alt="Icon of the edit icon" class="editProfileIcon">
             </a>
           </li>
           <li id="profile-3">
@@ -125,7 +125,7 @@
               <p id="profile-3-name">Profil</p>
             </a>
             <a class="editProfile">
-              <img src="src/img/icons/light/edit.svg" alt="Icon of the edit icon" class="editProfileIcon">
+              <img src="src/img/icons/light/delete.svg" alt="Icon of the edit icon" class="editProfileIcon">
             </a>
           </li>
           <li id="more-profile">
@@ -305,7 +305,7 @@
             <div id="a-d-content" class="no-select">
               <div id="save-local">
     
-                <input type="checkbox" name="save-local" id="save-profile" class="save-profile-light">
+                <input type="checkbox" name="save-local" id="save-profile" class="save-profile-light">  <!-- tabindex="15" -->
                 <label for="save-profile" class="medium-title">Profil lokal speichern
                   <span class="hint--right hint--medium" aria-label="Die Anmeldedaten werden lokal abgespeichert, damit du nächstes Mal direkt loslegen kannst.">
                     <img src="src/img/icons/light/info-small.svg" alt="Image of the help icon" class="info">
