Updated login function

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -104,7 +104,7 @@
           <li id="profile-1">
             <a>
               <img class="profileIcon" src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
-              <p id="profile-1-name">Profil</p> 
+              <p class="uid-profile-1" id="profile-1-name">Profil</p> 
             </a>
             <a class="editProfile">
               <img src="src/img/icons/light/delete.svg" alt="Icon of the edit icon" class="editProfileIcon">
@@ -113,7 +113,7 @@
           <li id="profile-2">
             <a>
               <img class="profileIcon" src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
-              <p id="profile-2-name">Profil</p> 
+              <p class="uid-profile-1" id="profile-2-name">Profil</p> 
             </a>
             <a class="editProfile">
               <img src="src/img/icons/light/delete.svg" alt="Icon of the edit icon" class="editProfileIcon">
@@ -122,7 +122,7 @@
           <li id="profile-3">
             <a>
               <img class="profileIcon" src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
-              <p id="profile-3-name">Profil</p>
+              <p class="uid-profile-1" id="profile-3-name">Profil</p>
             </a>
             <a class="editProfile">
               <img src="src/img/icons/light/delete.svg" alt="Icon of the edit icon" class="editProfileIcon">
@@ -270,9 +270,9 @@
                     </button>
                   </div>
                   <div id="profileDropdownContent">
-                    <a id="uid-profile-1" class="uid-profile-1">Profil 1</a>
-                    <a id="uid-profile-2">Profil 2</a>
-                    <a id="uid-profile-3">Profil 3</a>
+                    <a class="uid-profile-1">Profil 1</a>
+                    <a class="uid-profile-2">Profil 2</a>
+                    <a class="uid-profile-3">Profil 3</a>
                   </div>
                 </div>
 
