--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -265,8 +265,8 @@
                 <div id="profileDropdown" class="no-select" tabindex="-1">
                   <div id="profileDropdownMain">
                     <button id="profileDropdownButton" type="button">
-                      <img src="src/img/icons/light/show-more.svg" alt="Icon of an arrow facing downwards" id="profileDropdownImage" class="profileDropdownImage">
-                      <img src="src/img/icons/light/show-more-grey.svg" alt="Icon of an arrow facing downwards" id="profileDropdownImageNoFocus" class="profileDropdownImage">
+                      <img src="src/img/icons/light/show-more.svg" alt="Icon of profile search" id="profileDropdownImage" class="profileDropdownImage">
+                      <img src="src/img/icons/light/show-more-grey.svg" alt="Icon of profile search" id="profileDropdownImageNoFocus" class="profileDropdownImage">
                     </button>
                   </div>
                   <div id="profileDropdownContent">
