--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -19,7 +19,8 @@
     <script defer src="src/js/theme.js"></script>
     <script defer src="src/js/nav.js"></script>
     <script defer src="ipc.js"></script>
-    <script src="json.js"></script>
+    <script src="userData.js"></script>
+    <script src="userPassword.js"></script>
     
     <script defer src="src/js/index.js"></script>
     <script>if (window.module) module = window.module;</script>
