--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -108,8 +108,8 @@
               <img class="profileIcon" src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
               <p class="uid-profile-1" id="profile-1-name">Profil</p> 
             </a>
-            <a class="editProfile">
-              <img src="src/img/icons/light/delete.svg" alt="Icon of the edit icon" class="editProfileIcon">
+            <a id="delete-1" class="deleteProfile">
+              <img src="src/img/icons/light/delete.svg" alt="Icon of the delete icon" id="deleteIcon-1" class="deleteProfileIcon">
             </a>
           </li>
           <li id="profile-2">
@@ -117,8 +117,8 @@
               <img class="profileIcon" src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
               <p class="uid-profile-1" id="profile-2-name">Profil</p> 
             </a>
-            <a class="editProfile">
-              <img src="src/img/icons/light/delete.svg" alt="Icon of the edit icon" class="editProfileIcon">
+            <a id="delete-2" class="deleteProfile">
+              <img src="src/img/icons/light/delete.svg" alt="Icon of the delete icon" id="deleteIcon-2" class="deleteProfileIcon">
             </a>
           </li>
           <li id="profile-3">
@@ -126,8 +126,8 @@
               <img class="profileIcon" src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
               <p class="uid-profile-1" id="profile-3-name">Profil</p>
             </a>
-            <a class="editProfile">
-              <img src="src/img/icons/light/delete.svg" alt="Icon of the edit icon" class="editProfileIcon">
+            <a id="delete-3" class="deleteProfile">
+              <img src="src/img/icons/light/delete.svg" alt="Icon of the delete icon" id="deleteIcon-3" class="deleteProfileIcon">
             </a>
           </li>
           <li id="more-profile">
