Updated profile behaviour

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -104,7 +104,7 @@
         <div class="container-blob"></div> 
         <ul id="profile-content">
           <li id="profile-1">
-            <a>
+            <a id="profile-1-content">
               <img class="profileIcon" src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
               <p class="uid-profile-1" id="profile-1-name">Profil</p> 
             </a>
@@ -113,7 +113,7 @@
             </a>
           </li>
           <li id="profile-2">
-            <a>
+            <a id="profile-2-content">
               <img class="profileIcon" src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
               <p class="uid-profile-1" id="profile-2-name">Profil</p> 
             </a>
@@ -122,7 +122,7 @@
             </a>
           </li>
           <li id="profile-3">
-            <a>
+            <a id="profile-3-content">
               <img class="profileIcon" src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
               <p class="uid-profile-1" id="profile-3-name">Profil</p>
             </a>
