Fixed profile clicking bug

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -105,7 +105,7 @@
         <ul id="profile-content">
           <li id="profile-1">
             <a id="profile-1-content">
-              <img class="profileIcon" src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
+              <img class="profileIcon" id="profile-1-img" src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
               <p class="uid-profile-1" id="profile-1-name">Profil</p> 
             </a>
             <a id="delete-1" class="deleteProfile">
@@ -114,7 +114,7 @@
           </li>
           <li id="profile-2">
             <a id="profile-2-content">
-              <img class="profileIcon" src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
+              <img class="profileIcon" id="profile-2-img" src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
               <p class="uid-profile-1" id="profile-2-name">Profil</p> 
             </a>
             <a id="delete-2" class="deleteProfile">
@@ -123,7 +123,7 @@
           </li>
           <li id="profile-3">
             <a id="profile-3-content">
-              <img class="profileIcon" src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
+              <img class="profileIcon" id="profile-3-img" src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
               <p class="uid-profile-1" id="profile-3-name">Profil</p>
             </a>
             <a id="delete-3" class="deleteProfile">
