Fixed bugs and changed profile behaviour

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -23,6 +23,7 @@
     <script defer src="ipc.js"></script>
     
     <script defer src="src/js/index.js"></script>
+    <script defer src="src/js//update.js"></script>
     <script>if (window.module) module = window.module;</script>
     <title>Instagram Automated Commenting</title>
   </head>
@@ -115,7 +116,7 @@
           <li id="profile-2">
             <a id="profile-2-content">
               <img class="profileIcon" id="profile-2-img" src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
-              <p class="uid-profile-1" id="profile-2-name">Profil</p> 
+              <p class="uid-profile-2" id="profile-2-name">Profil</p> 
             </a>
             <a id="delete-2" class="deleteProfile">
               <img src="src/img/icons/light/delete.svg" alt="Icon of the delete icon" id="deleteIcon-2" class="deleteProfileIcon">
@@ -124,7 +125,7 @@
           <li id="profile-3">
             <a id="profile-3-content">
               <img class="profileIcon" id="profile-3-img" src="src/img/icons/light/profile.svg" alt="Image of the profile icon"> 
-              <p class="uid-profile-1" id="profile-3-name">Profil</p>
+              <p class="uid-profile-3" id="profile-3-name">Profil</p>
             </a>
             <a id="delete-3" class="deleteProfile">
               <img src="src/img/icons/light/delete.svg" alt="Icon of the delete icon" id="deleteIcon-3" class="deleteProfileIcon">
