--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -12,9 +12,10 @@
     <!-- JS -->
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
     <script src="src/js/lib/jquery.min.js"></script>
-    <script src="userData.js"></script>
-    <script src="userPassword.js"></script>
+    <script src="src/js/userData.js"></script>
+    <script src="src/js/userPassword.js"></script>
     <script defer src="src/js/notification.js"></script>
+    <script defer src="src/js/wifiSpeed.js"></script>
     <script defer src="src/js/pyStart.js"></script>
     <script defer src="src/js/banner.js"></script>
     <script defer src="src/js/cursor.js"></script>
@@ -23,7 +24,7 @@
     <script defer src="ipc.js"></script>
     
     <script defer src="src/js/index.js"></script>
-    <script defer src="src/js//update.js"></script>
+    <script defer src="src/js/update.js"></script>
     <script>if (window.module) module = window.module;</script>
     <title>Instagram Automated Commenting</title>
   </head>
