Updated diffrent functions

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -11,9 +11,10 @@
     <link rel="stylesheet" href="src/stylesheet/lib/hint.min.css">
     <!-- JS -->
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
-    <script src="src/js/lib/jquery.min.js"></script>
+    <script src="src/js/log.js"></script>
     <script src="src/js/userData.js"></script>
     <script src="src/js/userPassword.js"></script>
+    <script src="src/js/lib/jquery.min.js"></script>
     <script defer src="src/js/notification.js"></script>
     <script defer src="src/js/wifiSpeed.js"></script>
     <script defer src="src/js/pyStart.js"></script>
