Updated navigation timeout

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -373,7 +373,7 @@
         <div id="error-close-wifi" class="banner-close"><img class="clearIcon" src="src/img/icons/light/clear.svg" alt="Close icon for error banner"></div>
       </div>
     </div>
-    <p id="legal-note" class="no-select">Work in progress - &copy; 2021 by <a href="https://www.juek3y.com/">JueK3y</a></p>
+    <p id="legal-note" class="no-select">Work in progress &copy; 2021 - 2022 by <a href="https://www.juek3y.com/">JueK3y</a></p>
     <div class="small-cursor"></div>
   </body>
 </html>
