WiFi detection now working correct

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -85,7 +85,7 @@
           <a class="helpNav">
             <i class="line"></i>
             <img class="helpIcon" src="src/img/icons/light/help.svg" alt="Image of the help icon">
-            <p class="navText">Hilfe</p>
+            <p id="testid" class="navText">Hilfe</p>
           </a>
         </div>
         <footer>
