Added pause function

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -64,8 +64,9 @@
         <div id="upper-content">
           <a class="comment" id="active">
             <i class="line"></i>
+            <img id="idleIcon" src="src/img/icons/light/comment-settings.svg" alt="Image of the idle icon">
             <img id="runIcon" src="src/img/icons/light/run.svg" alt="Image of the run icon">
-            <img id="stopIcon" src="src/img/icons/light/stop.svg" alt="Image of the stop icon">
+            <img id="pauseIcon" src="src/img/icons/light/stop.svg" alt="Image of the pause icon">
             <p class="navText">Kommentieren</p>
           </a>
           <a class="profile">
@@ -327,14 +328,13 @@
           </details>
           <div id="start-stop" class="no-select">
             <div id="start">
-              
               <button type="button" id="start-btn" href="#">Starten</button>
-
+            </div>
+            <div id="pause">
+              <button type="button" id="pause-btn">Pausieren</button>
             </div>
             <div id="stop">
-
               <button type="button" id="stop-btn">Stoppen</button>
-
             </div>
           </div>
         </div>
