Updated search function

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -283,8 +283,7 @@
                 </div>
 
                 <div id="searchProfile" class="no-select" tabindex="-1">
-                  <div id="searchProfileContent">
-                  </div>
+                  <div id="searchProfileContent"></div>
                 </div>
 
               </div>
