Added password blur method

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -299,7 +299,7 @@
 
                 <input type="password" title="" id="password-form" class="medium-form" placeholder="•••••••••••••••••••••" autocomplete="off" required>
                 <label for="toggle" id="togglePW"><img src="src/img/icons/light/eye.svg" alt="Toggle Icon for password" id="togglePwImage"></label>
-                <input type="checkbox" id="toggle" class="hidden" onclick="passwordToggle()" tabindex="-1">
+                <input type="checkbox" id="toggle" class="hidden" tabindex="-1">
 
               </div>
             </div>
