--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -97,7 +97,27 @@
           <a class="settings">
             <i class="line"></i>
             <img id="settingsIcon" src="src/img/icons/light/settings.svg" alt="Image of the settings icon">
-            <img id="settingsUpdateIcon" src="src/img/icons/light/settings-update.svg" alt="Image of the settings icon with a blue dot">
+
+            <svg id="settingsUpdateIcon" version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+              viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve">
+              <path class="st0" d="M21.1,14l-1.2-0.9c-0.4-0.3-0.6-0.7-0.6-1.1c0-0.4,0.2-0.9,0.6-1.1l1.2-0.9c0.3-0.2,0.4-0.5,0.3-0.8
+                c-0.4-1.4-1.2-2.7-2.2-3.8c-0.2-0.2-0.6-0.3-0.8-0.2l-1.4,0.6c-0.2,0.1-0.4,0.1-0.6,0.1c-0.7,0-1.3-0.5-1.4-1.2l-0.2-1.5
+                c0-0.3-0.3-0.6-0.6-0.6c-0.7-0.2-1.5-0.2-2.2-0.3c-0.8,0-1.5,0.1-2.2,0.3C9.5,2.6,9.3,2.8,9.2,3.2L9.1,4.7c0,0.4-0.3,0.8-0.7,1
+                C8,5.9,7.5,6,7.1,5.8L5.7,5.2C5.4,5.1,5.1,5.1,4.9,5.3c-1,1.1-1.8,2.4-2.2,3.8c-0.1,0.3,0,0.6,0.3,0.8l1.2,0.9
+                c0.4,0.3,0.6,0.7,0.6,1.1c0,0.4-0.2,0.9-0.6,1.1L2.9,14c-0.3,0.2-0.4,0.5-0.3,0.8c0.4,1.4,1.2,2.7,2.2,3.8c0.2,0.2,0.6,0.3,0.8,0.2
+                l1.4-0.6C7.5,18,8,18.1,8.4,18.3c0.4,0.2,0.6,0.6,0.7,1l0.2,1.5c0,0.3,0.3,0.6,0.6,0.6c0.7,0.2,1.3,0.2,2,0.2
+                c-0.2-0.5-0.2-1-0.3-1.5c-0.3,0-0.6,0-0.8-0.1l-0.1-1c-0.1-0.9-0.6-1.7-1.4-2.2c-0.8-0.5-1.8-0.5-2.6-0.1l-0.9,0.4
+                c-0.6-0.7-1-1.5-1.3-2.3l0.8-0.6c0.7-0.5,1.2-1.4,1.2-2.3c0-0.9-0.4-1.8-1.2-2.3L4.3,9.1c0.3-0.8,0.8-1.6,1.3-2.3l0.9,0.4
+                C7.4,7.5,8.3,7.5,9.1,7c0.8-0.5,1.3-1.3,1.4-2.2l0.1-1c0.4-0.1,0.9-0.1,1.4-0.1c0.4,0,0.9,0,1.3,0.1l0.1,0.9
+                c0.1,0.7,0.3,1.4,0.9,1.9c0.9,0.9,2.2,1,3.2,0.6l0.9-0.4c0.6,0.7,1,1.5,1.3,2.3l-0.8,0.6c-0.7,0.5-1.2,1.4-1.2,2.3
+                c0,0.9,0.4,1.8,1.2,2.3l0.8,0.6c0,0.1-0.1,0.1-0.1,0.2c0.5,0.3,0.9,0.6,1.2,1c0.2-0.4,0.4-0.8,0.5-1.3C21.4,14.5,21.3,14.2,21.1,14z
+                "/>
+              <path class="st0" d="M11.4,8.3c-1.6,0.2-2.9,1.5-3.1,3.1c-0.4,2.5,1.8,4.7,4.3,4.3c1.6-0.2,2.9-1.5,3.1-3.1
+                C16.1,10.1,13.9,7.9,11.4,8.3z M11.4,14.2c-0.8-0.2-1.4-0.8-1.6-1.6c-0.4-1.7,1.1-3.1,2.7-2.7c0.8,0.2,1.4,0.8,1.6,1.6
+                C14.6,13.1,13.1,14.6,11.4,14.2z"/>
+              <circle class="st1" cx="17" cy="20" r="4"/>
+            </svg>
+
             <p class="navText">Einstellungen</p>
           </a>
         </footer>
