Added deactivation button to Not Connected banner

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -387,6 +387,7 @@
         <div id="error-icon" class="banner-icon"><img class="error-icon-img" src="src/img/icons/dark/clear.svg" alt="Error icon"></div>
         <div id="error-title" class="banner-title">Fehler</div>
         <div id="error-info" class="banner-info">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+        <button id="error-button-hide" title="Stelle diese Nachricht ab">Deaktivieren</button>
         <div id="error-close" class="banner-close"><img class="clearIcon" src="src/img/icons/light/clear.svg" alt="Close icon for error banner"></div>
       </div>
     </div>
