Updated main function

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -12,6 +12,7 @@
     <!-- JS -->
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
     <script src="src/js/log.js"></script>
+    <script src="src/js/mainApp.js"></script>
     <script src="src/js/userData.js"></script>
     <script src="src/js/userPassword.js"></script>
     <script src="src/js/lib/jquery.min.js"></script>
