Updated main logic

--- a/REWORK/index.html
+++ b/REWORK/index.html
@@ -10,14 +10,14 @@
     <link rel="stylesheet" href="src/stylesheet/index/index.min.css">
     <link rel="stylesheet" href="src/stylesheet/lib/hint.min.css">
     <!-- JS -->
-    <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
+    <script>if (typeof module === 'object') window.module = module; module = undefined;</script>
     <script src="src/js/log.js"></script>
-    <script src="src/js/mainApp.js"></script>
     <script src="src/js/userData.js"></script>
     <script src="src/js/userPassword.js"></script>
     <script src="src/js/lib/jquery.min.js"></script>
     <script defer src="src/js/notification.js"></script>
     <script defer src="src/js/wifiSpeed.js"></script>
+    <script defer src="src/js/mainApp.js"></script>
     <script defer src="src/js/banner.js"></script>
     <script defer src="src/js/cursor.js"></script>
     <script defer src="src/js/theme.js"></script>
