Fixed tab selector bug

--- a/Rework/public/index.html
+++ b/Rework/public/index.html
@@ -284,9 +284,9 @@
                 </label>
 
                 <input type="text" title="" id="username-form" class="medium-form" placeholder="john_doe_on_instagram" maxlength="30" autocomplete="off" required>
-                <div id="profileDropdown" class="no-select" tabindex="-1">
+                <div id="profileDropdown" class="no-select">
                   <div id="profileDropdownMain">
-                    <button id="profileDropdownButton" type="button">
+                    <button id="profileDropdownButton" type="button" tabindex="-1">
                       <img src="src/img/icons/light/show-more.svg" alt="Icon of profile search" id="profileDropdownImage" class="profileDropdownImage">
                       <img src="src/img/icons/light/show-more-grey.svg" alt="Icon of profile search" id="profileDropdownImageNoFocus" class="profileDropdownImage">
                     </button>
