--- a/Rework/public/index.html
+++ b/Rework/public/index.html
@@ -16,6 +16,7 @@
     <script src="src/js/lib/jquery.min.js"></script>
     <script defer src="src/js/notification.js"></script>
     <script defer src="src/js/wifiSpeed.js"></script>
+    <script defer src="src/js/userData.js"></script>
     <script defer src="src/js/mainApp.js"></script>
     <script defer src="src/js/banner.js"></script>
     <script defer src="src/js/cursor.js"></script>
