Updated small window, not working yet

--- a/Rework/public/index.html
+++ b/Rework/public/index.html
@@ -12,7 +12,7 @@
     <!-- JS -->
     <script>if (typeof module === 'object') window.module = module; module = undefined;</script>
     <script src="src/js/log.js"></script>
-    <!-- TODO: Add in production <script src="src/js/blockMenu.js"></script> -->
+    <script src="src/js/blockMenu.js"></script>
     <script src="src/js/userPassword.js"></script>
     <script src="src/js/lib/jquery.min.js"></script>
     <script defer src="src/js/notification.js"></script>
@@ -412,7 +412,7 @@
         </div>
         <div id="small-window-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit omnis iusto culpa fuga aliquam corrupti est, ab quia natus ea libero doloribus. Autem iusto eveniet error nulla doloribus iure eius!</div>
         <div id="small-window-button">
-          <button id="small-window-main-button">- -</button>
+          <a id="small-window-main-button" target="_blank">- -</a>
           <button id="small-window-close-button">Schließen</button>
         </div>
       </div>
