Updated small window

--- a/Rework/public/index.html
+++ b/Rework/public/index.html
@@ -412,7 +412,7 @@
         </div>
         <div id="small-window-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit omnis iusto culpa fuga aliquam corrupti est, ab quia natus ea libero doloribus. Autem iusto eveniet error nulla doloribus iure eius!</div>
         <div id="small-window-button">
-          <a id="small-window-main-button" target="_blank">- -</a>
+          <button id="small-window-main-button"><a id="small-window-main-href" target="_blank">- -</a></button>
           <button id="small-window-close-button">Schließen</button>
         </div>
       </div>
