Updated main logic

--- a/Rework/public/index.html
+++ b/Rework/public/index.html
@@ -407,13 +407,14 @@
     <div id="small-window" class="no-select">
       <div id="small-window-content">
         <div id="small-window-header">
-          <div id="small-window-icon"><img id="small-window-icon-img" src="src/img/icons/light/help.svg"></div>
+          <div id="small-window-icon"><img id="small-window-icon-img"></div>
           <div id="small-window-title">Title</div>
         </div>
         <div id="small-window-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit omnis iusto culpa fuga aliquam corrupti est, ab quia natus ea libero doloribus. Autem iusto eveniet error nulla doloribus iure eius!</div>
         <div id="small-window-button">
           <button id="small-window-main-button"><a id="small-window-main-href" target="_blank">- -</a></button>
-          <button id="small-window-close-button">Schließen</button>
+          <button class="small-window-close-button" id="small-window-two-close">Schließen</button>
+          <button class="small-window-close-button" id="small-window-one-close">Schließen</button>
         </div>
       </div>
     </div>
