--- a/Rework/public/index.html
+++ b/Rework/public/index.html
@@ -334,7 +334,7 @@
             <summary id="details">
 
               <i class="line-additional"></i>
-              <p id="small-detail-title">Erweiterte Einstellungen</p>
+              <p id="small-detail-title">Zusätzliche Optionen</p>
               <i class="line-additional"></i>
 
             </summary>
@@ -351,7 +351,7 @@
               </div>
               <div id="edit-comments">
     
-                <input type="button" value="Kommentare editieren" id="edit-button">
+                <input type="button" value="Kommentare bearbeiten" id="edit-button">
     
               </div>
             </div>
