Updated version and release type

--- a/public/index.html
+++ b/public/index.html
@@ -420,10 +420,11 @@
 
         <div id="small-window-version">
           <div class="small-window-description" id="s-w-d-version">
-            <p>Version: x.0.1</p>
-            <p>Developer release</p>
+            <p>Version: 0.8.1-alpha</p>
+            <p>Alpha release</p>
             <p>Work in Progress</p>
             <p>Copyright © 2021 - 2022 by JueK3y</p>
+            <!-- TODO: Automate current year and version -!-->
           </div>
           <div class="small-window-button" id="s-w-b-version">
             <button class="small-window-close-button small-window-one-close" type="button">Schließen</button>
