Added version detection

--- a/public/index.html
+++ b/public/index.html
@@ -420,7 +420,7 @@
 
         <div id="small-window-version">
           <div class="small-window-description" id="s-w-d-version">
-            <p>Version: 0.8.1-alpha</p>
+            <p>Version: <span id="currentVersion"></span></p>
             <p>Alpha release</p>
             <p>Work in Progress</p>
             <p>Copyright © 2021 - 2022 by JueK3y</p>
