Updated version detection

--- a/public/index.html
+++ b/public/index.html
@@ -407,11 +407,11 @@
       <div id="small-window-content">
         <div id="small-window-header">
           <div id="small-window-icon" class="no-select"><img id="small-window-icon-img"></div>
-          <div id="small-window-title" class="no-select">Title</div>
+          <div id="small-window-title" class="no-select">Titel</div>
         </div>
 
         <div id="small-window-template" class="no-select">
-          <div class="small-window-description" id="s-w-d-template">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit omnis iusto culpa fuga aliquam corrupti est, ab quia natus ea libero doloribus. Autem iusto eveniet error nulla doloribus iure eius!</div>
+          <div class="small-window-description" id="s-w-d-template">Hier steht eine Beschreibung</div>
           <div class="small-window-button">
             <button class="small-window-main-button" id="s-w-m-b-template" type="button"><a id="small-window-main-href" target="_blank">- -</a></button>
             <button class="small-window-close-button small-window-two-close" id="s-w-c-b-template" type="button">Schließen</button>
@@ -420,8 +420,8 @@
 
         <div id="small-window-version">
           <div class="small-window-description" id="s-w-d-version">
-            <p>Version: <span id="currentVersion"></span></p>
-            <p>Alpha release</p>
+            <p>Version: <span id="currentVersion">x.x.x</span></p>
+            <p id="verType">Developer release</p>
             <p>Work in Progress</p>
             <p>Copyright © 2021 - 2022 by JueK3y</p>
             <!-- TODO: Automate current year and version -!-->
