--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <script defer src="src/js/notification.js"></script>
     <script defer src="src/js/wifiSpeed.js"></script>
     <script defer src="src/js/userData.js"></script>
-    <script defer src="src/js/mainApp.js"></script>
+    <script defer src="src/js/mainApp-sec.js"></script>
     <script defer src="src/js/banner.js"></script>
     <script defer src="src/js/cursor.js"></script>
     <script defer src="src/js/theme.js"></script>
