--- a/public/index.html
+++ b/public/index.html
@@ -11,18 +11,19 @@
     <link rel="stylesheet" href="src/stylesheet/lib/hint.min.css">
     <!-- JS -->
     <script>if (typeof module === 'object') window.module = module; module = undefined;</script>
+    <script>window.$ = window.jQuery = require('./src/js/lib/jquery.min.js');</script>
     <script src="src/js/blockMenu.js"></script>
     <script src="src/js/userPassword.js"></script>
-    <script src="src/js/lib/jquery.min.js"></script>
     <script defer src="src/js/notification.js"></script>
     <script defer src="src/js/wifiSpeed.js"></script>
     <script defer src="src/js/userData.js"></script>
-    <script defer src="src/js/mainApp.js"></script>
+    <script defer src="src/js/mainApp-test.js"></script>
     <script defer src="src/js/banner.js"></script>
     <script defer src="src/js/cursor.js"></script>
     <script defer src="src/js/theme.js"></script>
     <script defer src="src/js/nav.js"></script>
-    <script defer src="ipc.js"></script>
+    <script defer src="ipc.js"></script>    
+    <script>require('./src/js/translations')</script>
     
     <script defer src="src/js/index.js"></script>
     <script>if (window.module) module = window.module;</script>
