--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,10 @@
     <!-- JS -->
     <script>if (typeof module === 'object') window.module = module; module = undefined;</script>
     <script>window.$ = window.jQuery = require('./src/js/lib/jquery.min.js');</script>
+    <script>window.i18n = new(require('./src/translations/i18n'));</script>
     <script src="src/js/blockMenu.js"></script>
     <script src="src/js/userPassword.js"></script>
+    <script src="src/js/lib/jquery.min.js"></script>
     <script defer src="src/js/notification.js"></script>
     <script defer src="src/js/wifiSpeed.js"></script>
     <script defer src="src/js/userData.js"></script>
